--- a/hydra_conf/pipeline/multi.yaml
+++ b/hydra_conf/pipeline/multi.yaml
@@ -4,8 +4,9 @@ hydra:
     subdir: ${pipeline_subdir}
   sweeper:
     pipelines:
-      - [normalize, table2graph, graph2text]
+      - [normalize, table2graph, graph2text, text2model]
     stage_variants:
       normalize: [leva]
       table2graph: [leva]
       graph2text: [node2vec]
+      text2model: [word2vec]
