--- a/hydra_conf/pipeline/single.yaml
+++ b/hydra_conf/pipeline/single.yaml
@@ -1,2 +1,2 @@
 # @package _global_
-pipeline: [normalize, table2graph, graph2text, text2model]
+pipeline: [normalize, table2graph, graph2text, text2model, model2emb]
