--- a/hydra_conf/pipeline/multi.yaml
+++ b/hydra_conf/pipeline/multi.yaml
@@ -4,10 +4,11 @@ hydra:
     subdir: ${pipeline_subdir}
   sweeper:
     pipelines:
-      - [normalize, table2graph, graph2text, text2model, model2emb]
+      - [normalize, table2graph, graph2text, text2model, model2emb, classification]
     stage_variants:
       normalize: [leva]
       table2graph: [leva]
       graph2text: [node2vec]
       text2model: [word2vec]
       model2emb: [word2vec]
+      classification: [basic]
