--- a/hydra_conf/pipeline/multi.yaml
+++ b/hydra_conf/pipeline/multi.yaml
@@ -5,9 +5,11 @@ hydra:
   sweeper:
     pipelines:
       - [normalize, table2graph, graph2text, text2model, model2emb, classification]
+      - [normalize, table2graph, graph2model, model2emb, classification]
     stage_variants:
       normalize: [leva]
       table2graph: [leva]
+      graph2model: [ProNE]
       graph2text: [node2vec]
       text2model: [word2vec]
       model2emb: [word2vec]
