--- a/hydra_conf/single_run.yaml
+++ b/hydra_conf/single_run.yaml
@@ -1,6 +1,6 @@
 defaults:
   - dataset: sample
-  - embedding: small
+  - embedding: regular
   - normalize: leva
   - table2graph: leva
   - graph2model: ProNE
