--- a/hydra_conf/pipeline/multi.yaml
+++ b/hydra_conf/pipeline/multi.yaml
@@ -8,7 +8,7 @@ hydra:
       - [normalize, table2graph, graph2model, model2emb, classification]
     stage_variants:
       normalize: [leva]
-      table2graph: [leva]
+      table2graph: [leva, embdi]
       graph2model: [ProNE]
       graph2text: [node2vec]
       text2model: [word2vec]
