--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ gensim==3.8.3
 tqdm==4.47.0
 seaborn==0.11.1
 pandas==1.1.5
-scikit-learn==0.24.1
-tensorflow==2.4.1
+scikit-learn==1.1.2
+tensorflow>=2.4.1
 hydra-core==1.2
