--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 argh
 networkx==2.5
-numpy==1.19.5
+numpy>=1.20.1
 gensim==3.8.3
 tqdm==4.47.0
 seaborn==0.11.1
@@ -8,3 +8,4 @@ pandas==1.1.5
 scikit-learn==1.1.2
 tensorflow>=2.4.1
 hydra-core==1.2
+hydra-joblib-launcher
