--- a/hydra_conf/pipeline/gridsearch.yaml
+++ b/hydra_conf/pipeline/gridsearch.yaml
@@ -4,3 +4,5 @@ hydra:
         subdir: ${pipeline_subdir}
     sweeper:
         pipeline: [normalize, table2graph, graph2text, text2model, model2emb, classification]
+    launcher:
+        n_jobs: 32
