Add rwalk submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "scikit-hubness"]
 	path = scikit-hubness
 	url = https://github.com/VarIr/scikit-hubness
+[submodule "rwalk"]
+	path = rwalk
+	url = https://github.com/zhempstead/rwalk.git
