--- a/hydra_conf/pipeline/gridsearch.yaml
+++ b/hydra_conf/pipeline/gridsearch.yaml
@@ -1,8 +1,11 @@
 # @package _global_
+resume_workdir: null
+
 hydra:
     sweep:
         subdir: ${pipeline_subdir}
     sweeper:
         pipeline: [normalize, table2graph, graph2text, text2model, model2emb, classification]
     launcher:
-        n_jobs: 32
+        n_jobs: 24
+        verbose: 1
