Finish graph2model

--- a/hydra_conf/model2emb/word2vec.yaml
+++ b/hydra_conf/model2emb/word2vec.yaml
@@ -1,5 +1,3 @@
 method: word2vec
-dimensions: ${embedding.dimensions}
-window_size: 10 # Context size for optimization
-iter: 10 # Number of epochs in SGD
 use_value_nodes: True
+model_suffix: null
