--- a/hydra_conf/pipeline/gridsearch.yaml
+++ b/hydra_conf/pipeline/gridsearch.yaml
@@ -6,6 +6,7 @@ hydra:
         subdir: ${pipeline_subdir}
     sweeper:
         pipeline: [normalize, table2graph, graph2text, text2model, model2emb, classification]
+        #pipeline: [normalize, table2graph, graph2model, model2emb, classification]
     launcher:
         n_jobs: 24
         verbose: 1
