--- a/hydra_conf/run.yaml
+++ b/hydra_conf/run.yaml
@@ -8,14 +8,20 @@ defaults:
   - text2model: word2vec
   - model2emb: word2vec
   - classification: basic
-  - _self_
-  - pipeline: gridsearch
   - override hydra/sweeper: gridsearch
   - override hydra/launcher: joblib
 
-multirun: true
+resume_workdir: null
 
 hydra:
   job:
     chdir: true
   mode: MULTIRUN
+  sweep:
+    subdir: ${pipeline_subdir}
+  sweeper:
+    pipeline: [normalize, table2graph, graph2text, text2model, model2emb, classification]
+    # pipeline: [normalize, table2graph, graph2model, model2emb, classification]
+  launcher:
+    n_jobs: 24
+    verbose: 1
