Make graph2text pipeline deterministic
(modulo random seed param)

--- a/hydra_conf/run.yaml
+++ b/hydra_conf/run.yaml
@@ -11,6 +11,7 @@ defaults:
   - override hydra/sweeper: gridsearch
   - override hydra/launcher: joblib
 
+random_seed: 10
 resume_workdir: null
 
 hydra:
