--- a/hydra_conf/text2model/word2vec.yaml
+++ b/hydra_conf/text2model/word2vec.yaml
@@ -4,4 +4,4 @@ skipgram: True
 hierarchical_softmax: False
 window_size: 10 # Context size for optimization
 iter: 10 # Number of epochs in SGD
-workers: 4 # Number of parallel workers
+random_seed: ${random_seed}
