random_seed compatible with gridsearch_run

--- a/hydra_conf/downstream/basic.yaml
+++ b/hydra_conf/downstream/basic.yaml
@@ -6,5 +6,5 @@ methods_by_task:
   regression:
     - elastic
     - nn
-random_seed: ${random_seed}
+random_seed: ${normalize.random_seed}
 cv_splits: 5
