--- a/hydra_conf/run.yaml
+++ b/hydra_conf/run.yaml
@@ -1,6 +1,9 @@
 defaults:
   - dataset: sample
   - embedding: small
+  - pipeline: leva_rwalk
+
+  # Pipeline defaults
   - normalize: leva
   - table2graph: leva
   - graph2model: ProNE
@@ -8,6 +11,7 @@ defaults:
   - text2model: word2vec
   - model2emb: word2vec
   - downstream: basic
+
   - override hydra/sweeper: gridsearch
   - override hydra/launcher: joblib
   - _self_
@@ -21,8 +25,7 @@ hydra:
   sweep:
     subdir: ${pipeline_subdir}
   sweeper:
-    pipeline: [normalize, table2graph, graph2text, text2model, model2emb, downstream]
-    # pipeline: [normalize, table2graph, graph2model, model2emb, downstream]
+    pipeline: ${pipeline}
   launcher:
     n_jobs: 24
     verbose: 51
