Add table2text step
Pipeline step that creates "text" from tables without going through graph format

--- a/hydra_conf/run.yaml
+++ b/hydra_conf/run.yaml
@@ -6,6 +6,7 @@ defaults:
   # Pipeline defaults
   - normalize: leva
   - table2graph: leva
+  - table2text: naive
   - graph2model: ProNE
   - graph2text: node2vec
   - text2model: word2vec
