Intrinsic pipeline step

--- a/hydra_conf/pipeline/naive_text.yaml
+++ b/hydra_conf/pipeline/naive_text.yaml
@@ -1,1 +1,1 @@
-[dataset, normalize, table2text, text2model, model2emb, downstream]
+[dataset, normalize, table2text, text2model, model2emb, downstream, intrinsic]
