--- a/hydra_conf/pipeline/leva_mf.yaml
+++ b/hydra_conf/pipeline/leva_mf.yaml
@@ -1,1 +1,1 @@
-[dataset, normalize, table2graph, graph2model, model2emb, downstream]
+[dataset, normalize, table2graph, graph2model, model2emb, downstream, intrinsic]
