--- a/hydra_conf/pipeline/leva_rwalk.yaml
+++ b/hydra_conf/pipeline/leva_rwalk.yaml
@@ -1,1 +1,1 @@
-[dataset, normalize, table2graph, graph2text, text2model, model2emb, downstream]
+[dataset, normalize, table2graph, graph2text, text2model, model2emb, downstream, intrinsic]
