--- a/hydra_conf/intrinsic/metrics.yaml
+++ b/hydra_conf/intrinsic/metrics.yaml
@@ -1,3 +1,3 @@
 task: metrics
-model_suffix: ${model2emb.model_suffix}
+model_suffix: ${downstream.model_suffix}
 random_seed: ${global.random_seed}
